# cs285_spring2026

final_project/: pyproject.toml
final_project/src/agents/: cql_geodesic.py  o2o_agent.py  ppo.py  replay_buffer.py  sac_dirichlet.py
final_project/src/configs/: __init__.py  cql_geodesic_config.py  o2o_config.py  ppo_config.py  ppo_lstm_config.py  ppo_transformer_config.py  sac_dirichlet_config.py
final_project/src/envs/: data_utils.py  finrl_wrapper.py  macro_features.py  portfolio_env.py  sentiment_features.py
final_project/src/networks/: dirichlet_policy.py  policies.py  regime_encoder.py
final_project/src/scripts/: run.py  run_o2o.py
hw1/: .gitignore  Plotting.ipynb
hw1/src/hw1_imitation/: train.py
hw2/: .gitignore
hw2/exp/CartPole-v0_cartpole_lb_na_sd1_20260216_025213/: agent.pt  flags.json  log.csv  log.pkl
hw2/exp/CartPole-v0_cartpole_lb_rtg_na_sd1_20260216_025656/: agent.pt  flags.json  log.pkl
hw2/exp/CartPole-v0_cartpole_lb_rtg_sd1_20260216_024543/: agent.pt  flags.json  log.csv  log.pkl
hw3/: .gitignore  run.sh  submit_job.sh
hw4/: pyproject.toml  run.sh
hw4/hw4/: train.py
hw4/scripts/: modal_train.py
hw4_gradescope_submission/: submission_manifest.json
hw4_gradescope_submission/format_copy_grpo/: metrics.jsonl
hw4_gradescope_submission/format_copy_reinforce/: metrics.jsonl
hw4_gradescope_submission/math_hard_grpo/: metrics.jsonl
hw4_gradescope_submission/math_hard_reinforce/: metrics.jsonl
hw5/: prefetch_datasets.sh  run_q1_sacbc.sh  run_q2_iql.sh  run_q2_iql_modal.sh  run_q3_fql.sh  run_q3_fql_modal.sh
(+355 files in other folders)
