[project]
name = "final-project-offline-online"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.0,<2.3",
    "gymnasium>=0.29",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24,<2.0",
    "ta>=0.11",
    "wandb>=0.16",
    "ml-collections>=0.1.1",
    "tqdm>=4.65",
    "pandas-market-calendars>=4.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "fredapi>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

